# wbc-mjlab

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  RELEASING.md  pyproject.toml
.github/workflows/: release.yml
data/: README.md
data/g1/: README.md
data/g1/samples/: README.md  flip_090_001__A304.csv  flip_090_002__A304.csv  flip_090_003__A304_M.csv  flip_360_009__A416.csv  flip_360_011__A416.csv
demos/: README.md
docs/: INSTALLATION.md  ROADMAP.md  TASKS.md  USAGE.md
notebooks/: README.md  custom_task_train.ipynb  demo.ipynb
src/wbc_mjlab/: __init__.py  data_paths.py  demo_assets.py  deploy_paths.py  mjlab_entry.py
src/wbc_mjlab/actuation/: __init__.py  envelope.py
src/wbc_mjlab/env/: __init__.py  se_actor_obs.py  wbc_env_cfg.py
src/wbc_mjlab/env/mdp/: __init__.py  actions.py  assistive_wrench.py  commands.py  metrics.py  observations.py  rewards.py  sampling.py  terminations.py
src/wbc_mjlab/export/: __init__.py  export_cli.py  policy_bundle.py  tracking_params_yaml.py  web_reference.py  web_reference_bundle.py
src/wbc_mjlab/motion/: __init__.py  csv_to_npz.py  data_to_npz.py  manifest.py  motion_export_bundle.py  motion_formats.py  motion_z_debias.py  pkl_to_npz.py  robot_assets.py  stack_bundle.py  tyro_cli.py
src/wbc_mjlab/rl/: __init__.py  runner.py
src/wbc_mjlab/robots/: __init__.py  env.py  ids.py
src/wbc_mjlab/robots/g1/: __init__.py  actuators.py  constants.py  env_cfg.py  envelope.py  instance.py  presets.py  rl_cfg.py
src/wbc_mjlab/robots/g1/configs/: __init__.py  base.py  binary_failure.py  nose.py  wbc.py  zest.py
src/wbc_mjlab/scripts/: demo.py  list_envs.py  play.py  plot_rsi_bins.py  train.py  vis_data.py  wbc_cli.py
src/wbc_mjlab/tasks/: __init__.py  config.py  preset.py  register.py
tests/: smoke_test.py  test_web_reference.py
